# claude-usage-widget

./: .gitignore  ClaudeUsageTray.sln  README.md  installer.iss  setup-startup.ps1
.github/workflows/: release.yml
ClaudeUsageTray/: ClaudeUsageTray.csproj  Program.cs
companion/: index.html  package.json  vite.config.ts
companion/src/: App.tsx
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: lib.rs  main.rs
companion/src-tauri/src/commands/: cursor.rs  hittest.rs  mod.rs  usage.rs  windows.rs
companion/src/canvas/: hitTest.ts  physics.ts  renderer.ts
companion/src/hooks/: useActiveWindow.ts  useClickThrough.ts  useUsage.ts
scraper/: package-lock.json  package.json  scrape-usage.js
