[package]
name = "companion"
version = "0.1.0"
edition = "2021"

[lib]
name = "companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "6"
chrono = "0.4"
mouse_position = "0.1"
tokio = { version = "1", features = ["fs"] }
tauri-plugin-global-shortcut = "2.3.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_System_Com", "Win32_UI_Shell"] }
